--- a/index.html
+++ b/index.html
@@ -10,12 +10,30 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Open+Sans:wght@300;700&display=swap"
         rel="stylesheet">
-        <link rel="stylesheet" href="style.css">
-    <title>Paradise</title>
+    <link rel="stylesheet" href="css/main.css">
+    <title>Tropical Paradise</title>
 </head>
 
 <body>
+    <button class="burger-btn">
+        <div class="burger-btn__box">
+            <div class="burger-btn__bars"></div>
+        </div>
+    </button>
 
+    <nav class="nav"></nav>
+    <header class="header section">
+        <h1 class="header__heading">Tropical Paradise</h1>
+        <p class="header__text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+        <a href="" id="offers" class="header__btn btn-special-animation">Poznaj ofertę</a>
+        <div class="white-block white-block-left"></div>
+    </header>
+
+
+
+
+
+    <script src="./js/main.js"></script>
 </body>
 
 </html>
