--- a/index.html
+++ b/index.html
@@ -21,7 +21,14 @@
         </div>
     </button>
 
-    <nav class="nav"></nav>
+    <nav class="nav">
+        <div class="nav__items">
+            <a href="#islands" class="nav__item">Wysypy</a>
+            <a href="#offers" class="nav__item">Oferta</a>
+            <a href="#reviews" class="nav__item">Opinie</a>
+            <a href="#contact" class="nav__item">Kontakt</a>
+        </div>
+    </nav>
     <header class="header section">
         <h1 class="header__heading">Tropical Paradise</h1>
         <p class="header__text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
