added section dreams

--- a/index.html
+++ b/index.html
@@ -35,6 +35,42 @@
         <a href="" id="offers" class="header__btn btn-special-animation">Poznaj ofertę</a>
         <div class="white-block white-block-left"></div>
     </header>
+    <main class="main">
+        <section class="dreams section-padding section white-section">
+            <div class="wrapper">
+                <h2 class="section-heading">Spełniaj marzenia</h2>
+
+                <div class="dreams__box">
+                    <div class="dreams__box-img"><img src="./img/paradise-598201_640.jpg" alt="domki nad oceanem"
+                            class="dreams__img">
+                    </div>
+                    <div class="dreams__box-text">
+                        <h3 class="dreams__title">Wymarzone wakacje</h3>
+                        <div class="dream__text">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem vitae
+                                quisquam laboriosam tenetur nemo quae error architecto quia provident, velit, molestias
+                                cum
+                                maxime magni nulla nostrum id ex doloribus blanditiis.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="dreams__box">
+                    <div class="dreams__box-img dreams__box-img--right"><img src="./img/bora-bora-3023437_640.jpg"
+                            alt="domki nad oceanem na tle gór" class="dreams__img">
+
+                    </div>
+                    <div class="dreams__box-text dreams__box-text--right">
+                        <h3 class="dreams__title">Niezapomniane przygody</h3>
+                        <div class="dream__text">
+                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                                Voluptates tenetur officia molestiae expedita reiciendis velit nesciunt doloremque.
+                                Tempore aut quae distinctio architecto velit animi earum porro quos eum nisi.</p>
+                        </div>
+                    </div>
+                </div>
+
+        </section>
+    </main>
 
 
 
